bk_ida/gccida/c1/do_SUBST_INT
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_SUBST_INT/src/combine.c:944:9: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
frees = undobuf_0.frees; 
        ^~~~~~~~~
        undobuf
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_SUBST_INT/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_SUBST_INT/src/combine.c:945:6: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
if ( undobuf_0.frees ) 
     ^~~~~~~~~
     undobuf
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_SUBST_INT/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_SUBST_INT/src/combine.c:946:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undobuf_0.frees->next; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_SUBST_INT/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_SUBST_INT/src/combine.c:946:19: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undobuf_0.frees->next; 
                  ^~~~~~~~~
                  undobuf
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_SUBST_INT/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_SUBST_INT/src/combine.c:953:15: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
frees->next = undobuf_0.undos; 
              ^~~~~~~~~
              undobuf
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_SUBST_INT/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_SUBST_INT/src/combine.c:954:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.undos = frees; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_SUBST_INT/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_SUBST_INT/src/obj/combine.o] Error 1
